--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -80,10 +80,10 @@ steps:
           --size=2 \
           --zone=$${ZONE}
 
-        # Add the 'green' label after creation.
+        # Use an 'update' command with a format that should work regardless of gcloud version.
         gcloud compute instance-groups managed update $${GREEN_MIG} \
           --zone=$${ZONE} \
-          --labels=status=green
+          --update-labels=status=green
 
         echo "Configuring named ports..."
         gcloud compute instance-groups set-named-ports $${GREEN_MIG} \
@@ -156,9 +156,6 @@ steps:
 
         # Update labels on the new MIG to make it the "blue" one for the next deployment
         gcloud compute instance-groups managed update $${GREEN_MIG} \
-            --zone=$${ZONE} --labels=status=blue
+            --zone=$${ZONE} --update-labels=status=blue
         
         echo "✓ Deployment completed successfully. Old resources cleaned up."
-
-images:
-  - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
